bk_ida/sjengida/g0/setup_attackers
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/setup_attackers/src/see.c:502:6: error: use of undeclared identifier 'rook_o_2'
v2 = rook_o_2[i] + square; 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/setup_attackers/src/see.c:532:7: error: use of undeclared identifier 'rook_o_2'
v2 += rook_o_2[i]; 
      ^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/setup_attackers/src/see.c:538:6: error: use of undeclared identifier 'bishop_o_1'
v5 = bishop_o_1[j] + square; 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/setup_attackers/src/see.c:580:7: error: use of undeclared identifier 'bishop_o_1'
v5 += bishop_o_1[j]; 
      ^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/setup_attackers/src/see.c:586:6: error: use of undeclared identifier 'knight_o_0'
v8 = knight_o_0[k] + square; 
     ^
5 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/setup_attackers/src/obj/see.o] Error 1
